--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,10 @@
   --text-color-secondary: #757575;
   --border-color: #eeeeee;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: Roboto, Raleway, sans-serif;
   color: var(--text-color-main);
@@ -145,7 +148,8 @@ body {
   color: var(--white-color);
   cursor: pointer;
   border-radius: 4px;
-  border-color: var(--blue-color);
+  border: 0;
+  padding: 10px 41px;
 }
 /* main-description-section */
 .main-description-list {
@@ -225,6 +229,9 @@ body {
   border-radius: 0px 0px 4px 4px;
   padding-bottom: ;
 }
+.team-section-pic {
+  vertical-align: middle;
+}
 .team-section-name {
   font-weight: 500;
   font-size: 1rem;
@@ -270,6 +277,8 @@ body {
   letter-spacing: 0.03em;
   color: var(--text-color-main);
   cursor: pointer;
+  border: 0;
+  padding: 6px 22px;
 }
 .filters-button:hover,
 .filters-button:focus {
@@ -313,4 +322,8 @@ body {
   padding: 0;
   margin: 0;
   border: 1px solid var(--border-color);
+  border-top: 0;
+}
+.projects-pic {
+  vertical-align: middle;
 }
